Review maintenance tasks messages using Ajax Fix SynchPostMeta class name (was SynchPostsMeta before and so not visible in list of tasks)

--- a/plugins/maintenance/css/style.css
+++ b/plugins/maintenance/css/style.css
@@ -1,3 +1,6 @@
 .step-submit {
   margin-block-start: 1.5em;
 }
+.step-box:not(:has(> *)) {
+  display: none;
+}
